--- a/.github/workflows/prisma.yml
+++ b/.github/workflows/prisma.yml
@@ -45,7 +45,7 @@ jobs:
           access_key: ${{ secrets.PRISMA_CLOUD_ACCESS_KEY }}
           secret_key: ${{ secrets.PRISMA_CLOUD_SECRET_KEY }}
           # Scan sources on Prisma Cloud are uniquely identified by their name
-          asset_name: 'my-asset-name'
+          asset_name: 'cfngoat'
           # The service need to know the type of IaC being scanned
           template_type: 'CFT'
       - name: Upload SARIF file
